# Workshop001_Data_Engineering

./: .gitignore  EDA.ipynb  README.md  database_raw.py  export_raw.py  main.py  pyproject.toml  transformation.py
data/raw/: export_raw.py
data/transformation/: transformation.py
database/: database.py
function/database/: database.py
notebooks/: EDA_cleaned.ipynb  EDA_raw.ipynb
